--- a/style.css
+++ b/style.css
@@ -28,15 +28,22 @@ textarea {
     font-family: "Courier New", Courier, monospace;
     font-size: inherit;
     width: 100%;
+    height: 400px;
+    margin: 10px 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 #footer {
+    border-top: 2px solid black;
+    padding-top: 10px;
     clear: both;
-    margin: 10px 0;
+    margin: 10px 0 30px 0;
     text-align:center;
 }
 
-#board { height: 400px; }
+#board { height: 400px; background-color: #444; }
 
 #nav { margin: 2px 0; text-align: center; position: relative; }
 
@@ -60,4 +67,4 @@ textarea {
 body.playing #playPause { background-position: 132px -3px; }
 #forward { background-position: 468px -36px; }
 
-#pageLocation { position: absolute; right: 0; top: 0; font-size: 75%; font-weight: bold; }
+#pageLocation { font-size: 75%; font-weight: bold; }
