--- a/style.css
+++ b/style.css
@@ -18,46 +18,61 @@ li { line-height: 120%; margin-bottom: 8px; }
 #page:not(.edit) .if_edit { display: none; }
 
 #page-heading {
-    border-bottom: 2px solid black;
-    padding-bottom: 4px;
-    position: relative;
-    width: 100%;
+  border-bottom: 2px solid black;
+  padding-bottom: 4px;
+  position: relative;
+  width: 100%;
 }
 
 textarea {
-    font-family: "Courier New", Courier, monospace;
-    font-size: inherit;
-    width: 100%;
-    height: 400px;
-    margin: 10px 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+  font-family: "Courier New", Courier, monospace;
+  font-size: inherit;
+  width: 100%;
+  height: 400px;
+  margin: 10px 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #footer {
-    border-top: 2px solid black;
-    padding-top: 10px;
-    clear: both;
-    margin: 10px 0 30px 0;
-    text-align:center;
+  border-top: 2px solid black;
+  padding-top: 10px;
+  clear: both;
+  margin: 10px 0 30px 0;
+  text-align:center;
 }
 
-#board { height: 400px; background-color: #444; }
+#board { height: 400px; background-color: #444; position: relative; }
+
+div.cell {
+  position:absolute;
+  background-color: #888;;
+  border: 1px solid black;
+}
+
+div.cell > div { position:absolute; width: 100%; }
+div.current { height: 100%; background-color: red; }
+div.next { height: 0; z-index: 1; background-color: green; }
+
+body.flipping div.next {
+  -webkit-transition: height 1s ease-in;
+  height: 100%;
+}
 
 #nav { margin: 2px 0; text-align: center; position: relative; }
 
 #nav a {
-    background-image: url('images/icons.jpg');
-    display: inline-block;
-    border: 1px solid transparent;
-    margin: 2px 0;
-    text-decoration: none;
-    color: white;
-    height: 30px;
-    width: 30px;
-    border-radius: 4px;
-    -moz-border-radius: 4px;
+  background-image: url('images/icons.jpg');
+  display: inline-block;
+  border: 1px solid transparent;
+  margin: 2px 0;
+  text-decoration: none;
+  color: white;
+  height: 30px;
+  width: 30px;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
 }
 
 #nav a:hover { border: 1px solid orange; }
